cambios archivos-html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
- <h1> Bienvenidos a mi pagina </h1>h1></h1>   
+ <h1> Bienvenidos a mi pagina </h1>h1>
+</h1> como estan </body><h1>
+    
+</h1>   
 </body>
 </html>
